JS functions imported/exported

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,8 +38,7 @@
       </div>
     </div>
 
-
-    <script src="main.js"></script>
+    <script src="javascript/channels/index.js"></script>
 
   </body>
 </html>
