--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -27,7 +27,7 @@ h1 {
   font-family: 'Roboto', sans-serif;
   font-weight: 400px;
   color:  #FDE12D;
-  font-size:  60px;
+  font-size:  5vmax;
   margin-top: 0px;
   padding-top: 30px;
 }
@@ -73,6 +73,7 @@ button:hover {
 
 .map-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
 }
